<resources>
    <string name="app_name">AndroidLoginApp</string>
    <string name="LoginScreenWelcome">欢迎登录</string>
    <string name="LoginScreenWelcomeTip">请登录你的账号</string>
    <string name="LoginEmailHint">输入邮件地址</string>
    <string name="LoginPasswordHint">输入密码</string>
    <string name="LoginButton">登录</string>

    <!-- Profile Screen -->
    <string name="profile_title">个人中心</string>
    <string name="profile_avatar">头像</string>
    <string name="profile_username">用户名</string>
    <string name="profile_signature">个性签名</string>
    <string name="profile_personal_info">个人信息</string>
    <string name="profile_favorites">我的收藏</string>
    <string name="profile_history">浏览历史</string>
    <string name="profile_about_us">关于我们</string>
    <string name="profile_feedback">意见反馈</string>
    <string name="profile_logout">退出登录</string>
    <string name="profile_arrow">箭头</string>
    <string name="profile_default_username">未设置</string>
    <string name="profile_default_signature">这个人很懒，什么都没写</string>
</resources>